Some minor changes.

--- a/camera_ready/main.tex
+++ b/camera_ready/main.tex
@@ -84,6 +84,16 @@
 \input{experiments}
 \input{conclusion}
 
+\begin{acks}                            %% acks environment is optional
+This research was sponsored in part by
+the Deutsche Forschungsgemeinschaft project 389792660 TRR 248--CPEC
+% (see \url{https://perspicuous-computing.science})
+and by the European Research Council under the
+Grant Agreement 610150
+% (http://www.impact-erc.eu/)
+(ERC Synergy Grant ImPACT). 
+\end{acks}
+
 \bibliographystyle{plain}
 \bibliography{references}
 
