--- a/camera_ready/problem.tex
+++ b/camera_ready/problem.tex
@@ -43,7 +43,7 @@ $\|x_i - y_i \| \leq \varepsilon$ satisfies $\Phi$.
 
 It is important to notice that any solution for this problem is required to provide a \emph{formal guarantee} on the satisfaction of $\Phi$, 
 i.e., the reach-avoid specification $\Phi$ \emph{must} be satisfied under every value of the disturbances affecting the control systems. 
-Further, the solution must not require any information exchange between the different agents. Embedding this feature simplifies implementation by eliminating the need for regular synchronization between agents during runtime.
+Further, the solution must not require any information exchange between the different agents. Embedding this feature simplifies implementation by eliminating the need for regular synchronization between agents at run time.
 
 %The robustness margin $\varepsilon$ accounts for the possible tracking error of the ABCD-generated controller in Step~\ref{step:abcd} while tracking the nominal trajectory.
 %Because ALTRO ignores the disturbances, hence a positive tracking error is inevitable.
