--- a/camera_ready/intro.tex
+++ b/camera_ready/intro.tex
@@ -34,15 +34,16 @@ handle precise models of nonlinear dynamics and the effects of disturbance, but 
 \begin{figure}[t]
 \includegraphics[width = \columnwidth]{figures/outline_final.pdf}
 %\vspace*{-0.5cm}
-\caption{Overall algorithm: The blue block on the left (centrally) computes joint open-loop nominal trajectory for the overall system, and the green block on the right computes decentralized controllers for tracking the nominal trajectory using Abstraction Based Controller Design (ABCD).
+\caption{Overall algorithm: The blue block on the left (centrally) computes a joint open-loop nominal trajectory for the overall system.
+The green block on the right computes decentralized controllers for tracking the nominal trajectory using Abstraction Based Controller Design (ABCD).
 $\Set{\Sigma^i}_{i\in [1;N]}$ is a set of $N$ agents, $\Phi$ is a global reach-avoid specification, $\varepsilon$ is a robustness margin, $\rho_1,\ldots,\rho_N$ are the local projections of the nominal trajectory, $\eta_x,\eta_u$ are parameters used in ABCD, and $C_1,\ldots,C_N$ are the sought local feedback controllers for the individual agents.
-%\Sadegh{Please indicate the direction of arrow in "controller not found?" }
 }
 \label{fig:overall}
 %\vspace*{-0.2cm}
 \end{figure}
 
-In this paper, we provide a simple but effective \emph{combined} approach, where a global planning approach is used for nominal trajectory generation and 
+In this paper, we provide a simple but effective \emph{combined} approach.
+We use a global planning approach for nominal trajectory generation and 
 a local correct-by-construction feedback controller synthesis approach for guaranteed adherence to specification for each component
 in the presence of disturbances.
 Fig.~\ref{fig:overall} shows the overall algorithm.
@@ -53,20 +54,21 @@ The trajectory planner ignores the effect of disturbances, but takes a \emph{rob
 The role of the robustness parameter is to ensure that the specification is robustly satisfied: 
 Every trajectory within an $\varepsilon$-tube of the open-loop trajectory also satisfies the specification.
 
-Next, we project the unique open-loop trajectory on to a nominal trajectory for each individual component.
-The robustness of the trajectory means that there is a tube around the nominal trajectory.
+Next, we project the unique open-loop trajectory produced by the open-loop controller
+on to a nominal trajectory for each individual component.
+The robustness of the trajectory means that there is a tube around each nominal trajectory.
 In a second step, we solve a number of local \emph{guaranteed tracking control} problems, where we synthesize correct-by-construction
 controllers whose objective is to track the nominal trajectory while staying within the tube.
 The overall algorithm is more scalable and guarantees satisfaction of the global specification.
 
 %\KM{What does this last sentence mean? What "stronger guarantee than each component" do we provide?}
 %Global trajectory planning scales to large state spaces but does not guarantee correctness and each formal controller synthesis problem is solved locally.
-We show Empirically that our algorithm is able to generate provably correct feedback controllers for many
+We show empirically that our algorithm is able to generate provably correct feedback controllers for many
 systems for which neither technique is individually effective.
 Of course, since we decompose the problem, it is possible that there is no controller for a particular choice of the
 robustness parameter, or indeed, for other parameters used by the individual tools.
 In that case, there is an outer loop that searches through the parameter space.
-5
+
 \begin{figure}[t]
 	\centering
 	\includegraphics[width=\columnwidth]{figures/final_crane.pdf}
@@ -82,8 +84,12 @@ ALTRO is a state-of-the-art trajectory planning tool based on optimal control.
 It handles nonlinear dynamics and scales to large dimensions, but ignores disturbances or modeling uncertainties.
 SCOTS implements a highly parallelizable ABCD algorithm that generates a feedback controller for satisfying temporal specification.
 
-We empirically evaluate \tool on a number of multi-robot benchmarks, including coordinated reach-avoid problem for ground robots, formation control problem for drones, and lane merging for autonomous vehicles.
-In each case, we demonstrate that \tool can find decentralized and correct controllers within reasonable amount of time after consuming manageable amount of memory.
+We empirically evaluate \tool on a number of multi-robot benchmarks, including 
+a coordinated reach-avoid problem for ground robots, 
+a formation control problem for drones, and 
+a lane merging schenario for autonomous vehicles.
+In each case, we demonstrate that \tool can find decentralized and correct controllers within \textcolor{blue}{reasonable}
+time and memory bounds.
 
 Fig.~\ref{fig:cr_and_lft} shows a concrete multi-robot reach-avoid scenario with an overhead crane hanging from a trolley along a horizontal rail
 and a cart that drives underneath the crane in the same horizontal axis.
