--- a/camera_ready/prelims.tex
+++ b/camera_ready/prelims.tex
@@ -188,8 +188,8 @@ A (global) \emph{control specification} $\mathcal{L}$ is a set of finite sequenc
 Intuitively, a control specification specifies a set of ``good behaviors'' of the product system.
 The \emph{decentralized open-loop (resp. feedback) controller synthesis problem} asks, given $\set{\Sigma^i}$ and a global control specification $\mathcal{L}$,
 to construct a set of local open-loop (resp.\ feedback) controllers $\set{C^i}$ such that
-the trajectories of $\set{C^i}\triangleright \set{\Sigma^i}$ (resp.\ $\set{C^i}\parallel \set{\Sigma^i}$) all belong to the global
-control specification $\mathcal{L}$.
+$\set{C^i}\triangleright \set{\Sigma^i}$ (resp.\ $\set{C^i}\parallel \set{\Sigma^i}$) \emph{realizes} the global control specification $\mathcal{L}$,
+i.e., all trajectories of the respective systems belong to $\mathcal{L}$.
 
 In particular, we consider \emph{reach-avoid} specifications, written as  $\lnot\avoid\, \mathcal{U}\,\goal$ in linear temporal logic, for two subsets 
 $\avoid, \goal \subseteq X^\times$.
@@ -229,7 +229,7 @@ Since the formation is defined using the relative positions of the robots, it is
 	We ignore the effect of the disturbances for simplicity.
 	More formally, $X^1=X^2=\mathbb{R}$, $U^1=U^2=\set{-1,1}$, $W^1=W^2=\set{0}$, and $f^1(x^1,u^1)\equiv x^1+u^1$, $f^2(x^2,u^2)\equiv x^2+u^2$.
 	Suppose the initial states are $x_\init^1=0$ and $x_\init^2=5$, and assume that the specification requires them to \emph{simultaneously} reach the respective goal sets $\goal^1=\set{10}$ and $\goal^2=\set{20}$ while \emph{maintaining a distance} of at least $5$ among themselves.
-	This specification can be easily formulated as a reach-avoid objective $\left(\lnot\avoid\,\mathcal{U}\, \goal\right)$ for the overall two-dimensional product system, where $\avoid = \set{ (x^1,x^2)\in \mathbb{R}^2  \mid |x^1-x^2| < 5}$ and $\goal = (10,20)$.
+	This specification can be formulated as a reach-avoid objective $\left(\lnot\avoid\,\mathcal{U}\, \goal\right)$ for the overall two-dimensional product system, where $\avoid = \set{ (x^1,x^2)\in \mathbb{R}^2  \mid |x^1-x^2| < 5}$ and $\goal = \set{(10,20)}$.
 	On the other hand, a decomposition of this objective into independent reach-avoid sub-tasks for $\Sigma^1$ and $\Sigma^2$ is not possible, because the task has been specified in terms of their \emph{relative distance} and their \emph{simultaneous arrival} at the goal sets.
 %	}
 \end{example}
