--- a/main.tex
+++ b/main.tex
@@ -1,8 +1,8 @@
 \documentclass[sigconf,review]{acmart} 
-\settopmatter{printacmref=false} % Removes citation information below abstract
-\renewcommand\footnotetextcopyrightpermission[1]{} % removes footnote with conference information in first column
+% \settopmatter{printacmref=false} % Removes citation information below abstract
+% \renewcommand\footnotetextcopyrightpermission[1]{} % removes footnote with conference information in first column
 % \pagestyle{plain} % removes running headers
-\fancyfoot{} % for removing "manuscript submitted to ACM" running footer
+% \fancyfoot{} % for removing "manuscript submitted to ACM" running footer
 
 %\bibliographystyle{plainurl}
 
@@ -17,6 +17,15 @@
 % \@ifclassloaded{acmart}{\keywords{Abstraction Based Controller Design, Tracking Control}}{}
 \makeatother
 
+
+\copyrightyear{2021} 
+\acmYear{2021} 
+\setcopyright{rightsretained} 
+\acmConference[ICCPS '21]{ACM/IEEE 12th International Conference on Cyber-Physical Systems (with CPS-IoT Week 2021)}{May 19--21, 2021}{Nashville, TN, USA}
+\acmBooktitle{ACM/IEEE 12th International Conference on Cyber-Physical Systems (with CPS-IoT Week 2021) (ICCPS '21), May 19--21, 2021, Nashville, TN, USA}
+\acmDOI{10.1145/3450267.3450548}
+\acmISBN{978-1-4503-8353-0/21/05}
+
 \sloppy
 
 \begin{document}
@@ -24,6 +33,8 @@
 \begin{abstract}
 	\input{abstract}
 \end{abstract}
+
+
 
 \maketitle
 
