figure 1 is modified

--- a/camera_ready/intro.tex
+++ b/camera_ready/intro.tex
@@ -32,7 +32,7 @@ such as abstraction-based control design (ABCD) or Hamilton-Jacobi techniques,
 handle precise models of nonlinear dynamics and the effects of disturbance, but are difficult to scale beyond about $10$ dimensions.
 
 \begin{figure}[t]
-\includegraphics[width = \columnwidth]{figures/outline_final.pdf}
+\includegraphics[width = \columnwidth]{figures/Algorithm_outline_final.pdf}
 %\vspace*{-0.5cm}
 \caption{Overall algorithm: The blue block on the left (centrally) computes a joint open-loop nominal trajectory for the overall system.
 The green block on the right computes decentralized controllers for tracking the nominal trajectory using Abstraction Based Controller Design (ABCD).
