--- a/camera_ready/experiments.tex
+++ b/camera_ready/experiments.tex
@@ -8,11 +8,11 @@
 	\centering
 	\caption{Runtimes for four case studies.
 		\textmd{Run times (in seconds) for computing open-loop controllers over the corresponding product spaces using ALTRO ($T_{g}^{\mathit{plan}}$), 
-	number of input-state pairs of the finite abstraction for the largest ABCD task ($N_l$), 
+	number of state-input pairs of the finite abstraction for the largest ABCD task ($N_l$), 
 	abstraction and synthesis times in SCOTS for that task (respectively $T_{l}^{\mathit{abs}}$ and $T_{l}^{\mathit{syn}}$), 
-	number of input-state pairs of the finite state abstraction for the global ABCD ($N_g$), 
-	abstraction and synthesis times for computing a global controller for the product system using SCOTS (respectively $T_{g}^{\mathit{abs}}$ and $T_{g}^{\mathit{syn}}$).
-	% For local ABCD, the reported numbers correspond to the maximum value among all of the agents.
+	number of state-input pairs of the finite state abstraction for global ABCD ($N_g$), 
+	abstraction and synthesis times for computing a global controller for the product system using SCOTS 
+	(respectively $T_{g}^{\mathit{abs}}$ and $T_{g}^{\mathit{syn}}$). ``OOM'' denotes ``out of memory'' on a 1.5TB RAM machine.
 	}
 		\label{tab:runtimes}
 	}
@@ -43,7 +43,9 @@
 	\end{tabular}%}
 \end{table*}
 
-We have implemented our approach (as presented in Sec.~\ref{sec:problem}) in the tool called \tool, which is freely available online: https://github.com/MehrdadZareian/GAMARA.
+We have implemented our approach (as presented in Sec.~\ref{sec:problem}) in the open source tool \tool.\footnote{
+	\tool is available online: https://github.com/MehrdadZareian/GAMARA.
+}
 We evaluate the effectiveness of \tool on two distinct categories of problems: 
 local reach-avoid problems with collision avoidance and global formation control problems. 
 We consider four case studies: multi-drone path planning, crane and vehicle, lane merging, and multi-drone formation control. 
@@ -60,15 +62,13 @@ in parallel over different machines.
 To provide a more fine-grained comparison,
 Fig.~\ref{fig:box_plot} shows the variations of run times of the different local ABCD tasks for every experiment. 
 We have excluded the crane and vehicle case study in the figure due to an expected large variance originating from different dynamics. 
-%The corresponding numbers will be reported in the next section.
-Notice that a higher number of input-state pairs does not necessarily result in a higher run time for local ABCD as the 
+Notice that a higher number of state-input pairs does not necessarily result in a higher run time for local ABCD as the 
 number of transitions and features of the parallel implementation can play a role. 
 %
-We compare \tool with the ABCD applied to the product system to satisfy the global specification. 
-As reflected in Table~\ref{tab:runtimes}, memory requirement for the global ABCD exceeds both system's (laptop and cluster) limit (1.5TB of RAM) in all of the experiments.
+We compare \tool with ABCD applied to the product system to satisfy the global specification. 
+As reflected in Table~\ref{tab:runtimes}, memory requirement for global ABCD exceeds both system's 
+(laptop and cluster) limit (1.5TB of RAM) in all of the experiments.
 %
- %\MS{For reporting number of input-state pairs and run times of local ABCD we could report total, average or maximum values; currently, Tab.~\ref{tab:runtimes} contains maximum values (taken over all of the agents, corresponding to multi-machine implementation), while total and average values are reported in the body of the paper. Data will be unified once the decision is made.}
-%Note that while reported numbers for local controller synthesis correspond to the total run times over all of the robots, significant reduction would be expected if abstraction and synthesis phases were parallelized.
 %\begin{huge}
 %
 \begin{figure}[t]
@@ -100,11 +100,13 @@ Suppose $\set{\Sigma^i}$
 % with $\Sigma^i=(X^i,x_\init^i,U^i,W^i,f^i)$ 
 models a set of robots, 
 $\goal^i\subseteq X^i$ are the individual goal sets, and $\delta \in \mathbb{R}_{>0}$ is a safety margin for collisions. 
-\new{
-We consider the robots as point objects. $\delta$ is a constant greater than the radius of the bounding box around each robot, and by keeping a $\delta$ distance from the other robots and the obstacles, the robots can truly avoid collision in their physical domain.
-The parameter $\delta$ can additionally take into account statutory minimum safe distances among the robots, such as in autonomous driving-like scenarios.
-We emphasize that the choice of $\delta$ is completely independent of the choice of $\varepsilon$, where the latter is a robustness margin introduced to take into account the deviation of the system trajectories under external disturbances.
-}
+We consider each robot as a point object with a bounding box for its physical dimensions. 
+The parameter $\delta$ is chosen to be a constant greater than \new{twice} the radius of the bounding box around each robot. 
+By keeping a distance at least $\delta$ from the other robots and the obstacles, the robots can avoid collision in their physical domain.
+The parameter $\delta$ can additionally take into account statutory minimum safe distances among the robots, 
+such as in autonomous driving-like scenarios.
+The choice of $\delta$ is completely independent of the choice of $\varepsilon$. 
+The latter is a robustness margin introduced to take into account the deviation of the system trajectories under external disturbances.
 Suppose the specification requires that each robot $\Sigma^i$ eventually reaches $\goal^i$ 
 while avoiding the obstacle $\obs\subseteq \reals^2$ and collision with robots by the margin $\delta$.
 The global specification on the product system $\Sigma^\times$ 
@@ -121,32 +123,40 @@ is as follows:
 						 \exists i,j\in [1;N]\;.\;i\neq j\;.\;d_\col\left(x^i,x^j\right)\leq\delta
 					\end{array}},
 		\end{align}
-	where $x^i$ denotes the component of $x^\times$ corresponding to $\Sigma^i$, $d_\col(\cdot,\cdot)$ denotes a distance metric for measuring the geometric distance between positions of two systems located in the two-dimensional space, $d_\obs(\cdot,\cdot)$ denotes a distance metric for measuring the geometric distance between position of one system and the obstacle $\obs\subseteq \reals^2$.
+	where $x^i$ denotes the component of $x^\times$ corresponding to $\Sigma^i$, $d_\col(\cdot,\cdot)$ denotes a 
+distance metric for measuring the geometric distance between positions of two systems located in two-dimensional space, 
+and $d_\obs(\cdot,\cdot)$ denotes a distance metric for measuring the geometric distance between the 
+position of one system and the obstacle $\obs\subseteq \reals^2$.
 \end{itemize}
 %
-% Once the sets $\goal$ and $\avoid$ are obtained as above, we can use Alg.~\ref{alg:main} to find the set of feedback controllers $\set{C^i}$.
-%
 
-\new{
-%In this category of problems, we apply \tool to three multi-robot case studies, namely a multi-drone path planning problem (Fig.~\ref{fig:three figures}), a crane and a vehicle problem (Fig.~\ref{fig:cr_and_lft}), and a lane merging problem (Fig.~\ref{fig:merge}-\ref{fig:merging_distance}); the detailed models for the systems and their different parameters have been presented in Sec.~\ref{sec:Multirobot}-\ref{sec:lane merging} in the appendix, and the performance of \tool for these experiments have been summarized in the first three rows on Table~\ref{tab:runtimes}.
 In this category of problems, we apply our approach to three case studies as briefly discussed next. 
 The detailed models for the systems and their different parameters have been presented in Sec.~\ref{sec:Multirobot}-\ref{sec:lane merging} in the appendix, and the performance of \tool for these experiments have been summarized in the first three rows on Table~\ref{tab:runtimes}.
-}
-%\textcolor{red}{
+
 \subsubsection{Multi-drone path planning}\label{subsec:Multirobot}
 We consider a planning scenario for ten identical drones ($N=10$). 
-%A set of initial and target states for each drone is depicted in Fig.~\ref{fig:MA}.
-%The drones must avoid hitting a physical obstacle that is the green square in the center of Fig.~\ref{fig:MA}. %A physical obstacle is added to the problem over the $2D$ plane, depicted in Figure~\ref{fig:MA} with a yellow circle. 
-%The threshold for minimum distance from the obstacle and other drones is chosen to be $\delta=0.28$. %$\delta=\begin{bmatrix}0.28&0.28\end{bmatrix}^T$. %and $\delta_{obs}=\begin{bmatrix}2&2\end{bmatrix}^T$.
-The control objective is to synthesize a feedback controller for each drone so that in the presence of (bounded) disturbance, beginning from the specified initial state, the corresponding target state is reached within a finite horizon, while avoiding collision with other drones and the physical obstacle at every time point. Fig.~\ref{fig:3dtubes} gives time-space illustration for the safe tubes around the nominal trajectories. The tracking feedback controllers are synthesized such that every drone remains within its safe tube until reaching its destination, under presence of the worst-case disturbance.  Additional analysis and detailed models for the systems and their different parameters have been presented in Sec.~\ref{sec:Multirobot} in the appendix.
+The control objective is to synthesize a feedback controller for each drone so that in the presence of (bounded) disturbance, beginning from the specified initial state, the corresponding target state is reached within a finite horizon, 
+while avoiding collision with other drones and the physical obstacle at every time point. 
+Fig.~\ref{fig:3dtubes} gives a time-space illustration for the safe tubes around the nominal trajectories. 
+The tracking feedback controllers are synthesized such that every drone remains within its safe tube until reaching its destination, 
+even with worst-case disturbance.  
+Additional analysis and detailed models for the systems and their different parameters are presented in Sec.~\ref{sec:Multirobot} in the appendix.
+
 \subsubsection{Crane and Vehicle}
-The goal of this example is to study performance of our method for controlling a number of robots with different dynamics. As described in Sec.~\ref{sec:intro}, the goal is to move the overhead crane
+The goal of this example is to study the performance of our method for 
+controlling a number of robots with different dynamics. 
+As described in Sec.~\ref{sec:intro}, the goal is to move the overhead crane
 and the vehicle such that they do not collide.
-Formally guaranteed controllers are computed such that the generated open loop trajectory (see Fig.~\ref{fig:cr_and_lft} (\textbf{left})) is closely tracked under presence of worst-case disturbance. More detailed discussion on dynamics of systems and further analysis are presented in Sec.~\ref{subsec:crane_vehicle} in the appendix.
+Formally guaranteed controllers are computed such that the generated open loop trajectory 
+(see Fig.~\ref{fig:cr_and_lft} (\textbf{left})) is tracked even under disturbance. 
+More detailed discussion on dynamics of systems and further analysis are presented in Sec.~\ref{subsec:crane_vehicle} in the appendix.
 
 \subsubsection{Lane Merging}
 \label{subsec:lane merging}
-We study a lane merging problem wherein multiple controlled vehicles are driving over two merging lanes (Fig.~\ref{fig:merge}, \textbf{top} frame). A dangerous situation may occur at the merging point of the two lanes if vehicles are not controlled properly. Different variants of this problem have been studied in the literature (see, e.g., \cite{xiao2019merging,xiao2020merging}). Without seeking to optimize fuel consumption or travel time, we set the goal to control the vehicles to pass the merging zone safely. In particular, consider a situation where initially three cars are driving on each of the two lanes (Fig.~\ref{fig:merge}, (\textbf{top})). The control objective for each vehicle is to pass the red dashed line within a finite horizon without hitting the road's sides or colliding with other vehicles. Fig.~\ref{fig:merge} demonstrates snapshots of one sample trajectory when feedback controllers are employed under the presence of bounded disturbance. Additional analysis, systems' dynamics and parameters are reported in Sec.~\ref{sec:lane merging} in the appendix.
+We study a lane merging problem wherein multiple \RM{What is $N$?}
+controlled vehicles are driving over two merging lanes (Fig.~\ref{fig:merge}, \textbf{top} frame). 
+A dangerous situation may occur at the merging point of the two lanes if vehicles are not controlled properly. 
+Different variants of this problem have been studied in the literature (see, e.g., \cite{xiao2019merging,xiao2020merging}). Without seeking to optimize fuel consumption or travel time, we set the goal to control the vehicles to pass the merging zone safely. In particular, consider a situation where initially three cars are driving on each of the two lanes (Fig.~\ref{fig:merge}, (\textbf{top})). The control objective for each vehicle is to pass the red dashed line within a finite horizon without hitting the road's sides or colliding with other vehicles. Fig.~\ref{fig:merge} demonstrates snapshots of one sample trajectory when feedback controllers are employed under the presence of bounded disturbance. Additional analysis, systems' dynamics and parameters are reported in Sec.~\ref{sec:lane merging} in the appendix.
 \begin{figure}
 	\centering
 	\includegraphics[scale=.21]{figures/merge_updated.pdf}
@@ -191,19 +201,13 @@ We can express the formation control problem in the product state space as follo
 \end{itemize}
 where the last disjunction in the definition of $\avoid$ is the restriction required for maintaining the formation, and the rest are 
 same as in Sec.~\ref{sec:local reach-avoid}.
-% Once the sets $\goal$ and $\avoid$ are obtained as above, we can use Alg.~\ref{alg:main} to find the set of feedback controllers $\set{C^i}$.
 
-%\todo{The example goes here...}
-
-\new{
-%We performed a multi-drone formation control experiment (Fig.~\ref{fig:formation_ex}-\ref{fig:formation_distance}), where the models of the systems and the parameters used have been reported in Sec.~\ref{subsec:formation_control} in the appendix.
-%The performance of \tool for this experiment has been reported in the last row of Table~\ref{tab:runtimes}.
-}
 \subsubsection{Multi-drone formation control}
 \label{subsec:formation_control}
 Consider a formation control scenario where a set of five drones (identically modeled) need to go from a specified start point to a certain destination (both defined over the corresponding state spaces) within a finite horizon, while four of them forming a diamond around a fifth drone (positioned at the diamond's center) at every time point. There are two square obstacles from which the group needs to keep a certain minimum distance at all of the time points. Fig.~\ref{fig:formation_ex} illustrates four sequential frames of a sample perturbed trajectory generated by employing formally guaranteed feedback controllers. Notice that both 
 relative position and orientation between drones are kept (almost) constant 
-throughout the journey. Further analysis can be found in Sec.~\ref{sec:global formation control} in the appendix.
+throughout the journey. 
+Further analysis can be found in Sec.~\ref{sec:formation_control} in the appendix.
 %
  \begin{figure}[t]
 	\centering
