modified:   intro.tex

--- a/camera_ready/intro.tex
+++ b/camera_ready/intro.tex
@@ -88,7 +88,7 @@ We empirically evaluate \tool on a number of multi-robot benchmarks, including
 a coordinated reach-avoid problem for ground robots, 
 a formation control problem for drones, and 
 a lane merging schenario for autonomous vehicles.
-In each case, we demonstrate that \tool can find decentralized and correct controllers within \textcolor{blue}{reasonable}
+In each case, we demonstrate that \tool can find decentralized and correct controllers within reasonable
 time and memory bounds.
 
 Fig.~\ref{fig:cr_and_lft} shows a concrete multi-robot reach-avoid scenario with an overhead crane hanging from a trolley along a horizontal rail
