--- a/camera_ready/appendix.tex
+++ b/camera_ready/appendix.tex
@@ -17,7 +17,7 @@ where $f^d_\tau$ is the sampled-time abstraction of the following continuous dyn
 		u_2
 	\end{bmatrix}.
 \end{equation*}
-where $x_1$ and $x_2$ denote the drone's position in two-dimensional space, $x_3$ denotes the rotational angle, and $u_1$ and $u_2$ represent control inputs for each drone. Choosing a sampling time $\tau=0.1s$, the nominal dynamics $f^d_\tau$ can be characterized uniquely. 
+where $x_1$ and $x_2$ denote the drone's position (Meter) in two-dimensional space, $x_3$ denotes the rotational angle (Radian), and $u_1$ and $u_2$ represent control inputs for each drone. Choosing a sampling time $\tau=0.1s$, the nominal dynamics $f^d_\tau$ can be characterized uniquely. 
 We consider state and input spaces to be $X=[-1,11]^2\times[-2,3.3]$ and $U=[-2.4,2.4]^2$, respectively. 
 The disturbance set and robustness margin are chosen as $|W|\leq (0,0.025,0.025)$ and $\varepsilon=(0.20,0.20,0.24)$.
 
@@ -115,8 +115,8 @@ where
 	$M_t=M_c+M_p$ denotes the total mass,
 and
 	$l=0.5$ m is the half-pole length.
-Further, the cart's position, the pole's angle, and input force to the cart are denoted by $x_1^{(1)}=z$, $x_3^{(1)}=\theta$, 
-and $u^{(1)}=F$, respectively. 
+Further, the cart's position, the pole's angle, and input force to the cart are denoted by $x_1^{(1)}=z$ (in $m$), $x_3^{(1)}=\theta$ (in $Radian$), 
+and $u^{(1)}=F$ (in $kg *m/s^2$), respectively. 
 The continuous-time dynamics of the crane is of the following form:
 \[f^{c}(x^{(1)}(t),u^{(1)}(t)):=\begin{bmatrix}
 	\dot{x}_1^{(1)}\\
@@ -152,7 +152,7 @@ The vehicle's continuous-time dynamics takes the form of
 \[f^{l}(x^{(2)}(t),u^{(2)}(t))=\begin{bmatrix}
 \dot{x}_1^{(2)}\\ \dot{x}^{(2)}_2 \end{bmatrix}=\begin{bmatrix} x^{(2)}_2\\ u^{(2)} \end{bmatrix},
 \]
-where $x_1^{(2)}$ and $x_2^{(2)}$ denote the vehicle's position and speed and $u^{(2)}$ represents the vehicle's control input (acceleration). 
+where $x_1^{(2)}$ and $x_2^{(2)}$ denote the vehicle's position in $m$ and speed in $m/s$ and $u^{(2)}$ represents the vehicle's control input (acceleration). 
 On fixing the sampling time $\tau=0.1s$, one can derive $f^c_\tau$ and $f^l_\tau$. For the crane, the disturbance set and robustness margin are chosen as $|W^1|\leq(0,0.05,0,0)$ and  $\varepsilon^{1}=(0.135,0.385,0.176 ,0.768)$. Similarly, for the vehicle, disturbance set and robustness margin are chosen as $|W^2|\leq(0,0.1)$ and $\varepsilon^{2}=(0.08,0.12)$.
 %The output mapping for the crane is defined as
 %\[
@@ -281,10 +281,10 @@ In contrast, employing a feedback controller results in successful lane merging.
 In the multi-drone formation control case study, the nominal dynamics for each of the drones is the same as that in 
 Sec.~\ref{sec:Multirobot}. 
 The disturbance set and robustness margin are chosen as $|W|\leq (0.03,0.03,0.03)$ and $\varepsilon=(0.24,0.24,0.24)$. 
-Distance between each pair of drones positioned at the diamond's vertices is set to be $\lambda^{i,j}=\frac{3\sqrt{2}}{2}$ \RM{unit? m?}
-for $i,j\in\set{1,2,3,4}$, while the drone positioned at the center is supposed to keep distance $\lambda^{5,j}=1.5$ \RM{unit? m?} 
+Distance between each pair of drones positioned at the diamond's vertices is set to be $\lambda^{i,j}=\frac{3\sqrt{2}}{2}$ 
+for $i,j\in\set{1,2,3,4}$, while the drone positioned at the center is supposed to keep distance $\lambda^{5,j}=1.5$ 
 for $j\in\set{1,2,3,4}$. 
-Setting the minimum distance for obstacle avoidance to $\delta=0.4$ \RM{unit? m?} and horizon length $T=100$, 
+Setting the minimum distance for obstacle avoidance to $\delta=0.4$ and horizon length $T=100$, 
 ALTRO finds a valid solution over the product system with $15$ state and $10$ input variables within $114.3$ seconds.
 Next, we synthesize local controllers for every drone such that the specifications hold for the perturbed models with $\mu=0.5$. %We construct a tube around the (nominal) trajectory produced by ALTRO with the width vector $\varepsilon=\begin{bmatrix}??&??&??\end{bmatrix}^T$.
 %\RM{the state space should go before ALTRO}
