--- a/camera_ready/appendix.tex
+++ b/camera_ready/appendix.tex
@@ -17,12 +17,12 @@ where $f^d_\tau$ is the sampled-time abstraction of the following continuous dyn
 		u_2
 	\end{bmatrix}.
 \end{equation*}
-where $x_1$ and $x_2$ denote the drone's position \MZ{(Meter)} in two-dimensional space, $x_3$ denotes the rotational angle \MZ{(Radian)}, and $u_1$ and $u_2$ represent control inputs for each drone. Choosing a sampling time $\tau=0.1s$, the nominal dynamics $f^d_\tau$ can be characterized uniquely. 
+where $x_1$ and $x_2$ denote the drone's position in two-dimensional space, $x_3$ denotes the rotational angle, and $u_1$ and $u_2$ represent control inputs for each drone. Choosing a sampling time $\tau=0.1$ s, the nominal dynamics $f^d_\tau$ can be characterized uniquely. 
 We consider state and input spaces to be $X=[-1,11]^2\times[-2,3.3]$ and $U=[-2.4,2.4]^2$, respectively. 
 The disturbance set and robustness margin are chosen as $|W|\leq (0,0.025,0.025)$ and $\varepsilon=(0.20,0.20,0.24)$.
 
 Recall that we consider 10 drones, i.e., $N = 10$.
-Selecting the horizon length $T=104$ and minimum safe distance $\delta=0.24$, ALTRO computes a valid open-loop trajectory 
+Selecting the horizon length $T=104$ and minimum safe distance $\delta=0.24$ m, ALTRO computes a valid open-loop trajectory 
 in $77.8$ seconds for the product system with $30$ state and $20$ input variables.  
 Fig.~\ref{fig:3dtubes} gives time-space illustration for the safe tubes around the nominal trajectories. 
 
@@ -115,8 +115,8 @@ where
 	$M_t=M_c+M_p$ denotes the total mass,
 and
 	$l=0.5$ m is the half-pole length.
-Further, the cart's position, the pole's angle, and input force to the cart are denoted by $x_1^{(1)}=z$ \MZ{(in $m$)}, $x_3^{(1)}=\theta$ \MZ{(in $Radian$)}, 
-and $u^{(1)}=F$ \MZ{(in $kg *m/s^2$)}, respectively. 
+Further, the cart's position, the pole's angle, and input force to the cart are denoted by $x_1^{(1)}=z$, $x_3^{(1)}=\theta$, 
+and $u^{(1)}=F$, respectively. 
 The continuous-time dynamics of the crane is of the following form:
 \[f^{c}(x^{(1)}(t),u^{(1)}(t)):=\begin{bmatrix}
 	\dot{x}_1^{(1)}\\
@@ -152,8 +152,8 @@ The vehicle's continuous-time dynamics takes the form of
 \[f^{l}(x^{(2)}(t),u^{(2)}(t))=\begin{bmatrix}
 \dot{x}_1^{(2)}\\ \dot{x}^{(2)}_2 \end{bmatrix}=\begin{bmatrix} x^{(2)}_2\\ u^{(2)} \end{bmatrix},
 \]
-where $x_1^{(2)}$ and $x_2^{(2)}$ denote the vehicle's position \MZ{in $m$} and speed \MZ{in $m/s$} and $u^{(2)}$ represents the vehicle's control input (acceleration). 
-On fixing the sampling time $\tau=0.1s$, one can derive $f^c_\tau$ and $f^l_\tau$. For the crane, the disturbance set and robustness margin are chosen as $|W^1|\leq(0,0.05,0,0)$ and  $\varepsilon^{1}=(0.135,0.385,0.176 ,0.768)$. Similarly, for the vehicle, disturbance set and robustness margin are chosen as $|W^2|\leq(0,0.1)$ and $\varepsilon^{2}=(0.08,0.12)$.
+where $x_1^{(2)}$ and $x_2^{(2)}$ denote the vehicle's position and speed, and $u^{(2)}$ represents the vehicle's control input (acceleration). 
+On fixing the sampling time $\tau=0.1$ s, one can derive $f^c_\tau$ and $f^l_\tau$. For the crane, the disturbance set and robustness margin are chosen as $|W^1|\leq(0,0.05,0,0)$ and  $\varepsilon^{1}=(0.135,0.385,0.176 ,0.768)$. Similarly, for the vehicle, disturbance set and robustness margin are chosen as $|W^2|\leq(0,0.1)$ and $\varepsilon^{2}=(0.08,0.12)$.
 %The output mapping for the crane is defined as
 %\[
 %h^l=\begin{bmatrix}
@@ -163,7 +163,7 @@ On fixing the sampling time $\tau=0.1s$, one can derive $f^c_\tau$ and $f^l_\tau
 %\]
 %where, $y_2>0$ is a constant that denotes the height of the forklift's head with respect to the ground.
 
-There is no obstacle for this example and for minimum distance between the crane and the vehicle we choose $\delta=0.035$.
+There is no obstacle for this example and for minimum distance between the crane and the vehicle we choose $\delta=0.035$ m.
 Fixing the horizon length to $T=70$, ALTRO was capable of generating a valid nominal trajectory in $0.65$ seconds. 
 Fig.~\ref{fig:cr_and_lft} (\textbf{left}) demonstrates snapshots of the produced trajectory. 
 As before, under the nominal open-loop controllers, applying (constant) additive disturbance $W=(0,0.05,0,0)$ (to the cart-pole system) 
@@ -251,7 +251,7 @@ The large difference is due to the difference in the size of transition systems 
 %\]
 The nominal dynamics for each of the vehicles is the same as the one  for modeling drones (given in Sec.~\ref{sec:Multirobot}). 
 The disturbance set and robustness margin are chosen as $|W|\leq (0.03,0.03,0.03)$ and $\varepsilon=(0.16,0.16,0.16)$. %($\Sigma^i=(X,x_\init^i,U,W,f^d_\tau)$). 
-For collision and obstacle avoidance, we choose $\delta=0.37$.
+For collision and obstacle avoidance, we choose $\delta=0.37$ m.
 The horizon length is fixed to $T=110$. 
 Given these settings, ALTRO generates a valid nominal trajectory in $89.02$ seconds. 
 Next, we use ABCD in order to compute feedback controllers tolerating additive disturbance $W$. 
@@ -281,19 +281,19 @@ In contrast, employing a feedback controller results in successful lane merging.
 In the multi-drone formation control case study, the nominal dynamics for each of the drones is the same as that in 
 Sec.~\ref{sec:Multirobot}. 
 The disturbance set and robustness margin are chosen as $|W|\leq (0.03,0.03,0.03)$ and $\varepsilon=(0.24,0.24,0.24)$. 
-Distance between each pair of drones positioned at the diamond's vertices is set to be $\lambda^{i,j}=\frac{3\sqrt{2}}{2}$ 
-for $i,j\in\set{1,2,3,4}$, while the drone positioned at the center is supposed to keep distance $\lambda^{5,j}=1.5$ 
+Distance between each pair of drones positioned at the diamond's vertices is set to be $\lambda^{i,j}=\frac{3\sqrt{2}}{2} $ m 
+for $i,j\in\set{1,2,3,4}$, while the drone positioned at the center is supposed to keep distance $\lambda^{5,j}=1.5$ m 
 for $j\in\set{1,2,3,4}$. 
-Setting the minimum distance for obstacle avoidance to $\delta=0.4$ and horizon length $T=100$, 
+Setting the minimum distance for obstacle avoidance to $\delta=0.4$ m and horizon length $T=100$, 
 ALTRO finds a valid solution over the product system with $15$ state and $10$ input variables within $114.3$ seconds.
-Next, we synthesize local controllers for every drone such that the specifications hold for the perturbed models with $\mu=0.5$. %We construct a tube around the (nominal) trajectory produced by ALTRO with the width vector $\varepsilon=\begin{bmatrix}??&??&??\end{bmatrix}^T$.
+Next, we synthesize local controllers for every drone such that the specifications hold for the perturbed models with $\mu=0.5$ m. %We construct a tube around the (nominal) trajectory produced by ALTRO with the width vector $\varepsilon=\begin{bmatrix}??&??&??\end{bmatrix}^T$.
 %\RM{the state space should go before ALTRO}
 We consider state and input spaces to be $X=[-2,17]\times[-2,17]\times[0.6,1.6]$ and
 $U=[-0.9,4.8]\times[-3,3]$, respectively. We select $\eta_{X}=(0.03,0.03,0.03)$ and
 $\eta_{U}=(0.3,0.15)$. % and $\varepsilon=\begin{bmatrix}0.18&0.18&0.18\end{bmatrix}^T$.% results in state and input spaces with $10^9$ and $820$ points. 
 %Computing the transition system over inter-tube space with width $\varepsilon=\begin{bmatrix}0.18&0.18&0.18\end{bmatrix}^T$ results in smaller transition system with $4.9\times 10^5$ points. Given the above settings, SCOTS computes abstraction in $271$ seconds ($54.2$ seconds in average) and $66.5$ seconds ($13.3$ seconds in average). 
 Tab.~\ref{tab:runtimes} shows the run times and number of state-input pairs corresponding to local and global ABCD. 
-Already for two drones, the memory requirement for global ABCD exceeds the available memory of 1.5TB of RAM.
+Already for two drones, the memory requirement for global ABCD exceeds the available memory of 1.5 TB of RAM.
 Fig.~\ref{fig:formation_ex} illustrates four sequential frames of a sample perturbed trajectory generated by employing 
 feedback controllers. Notice that both 
 relative position and orientation between drones are kept (almost) constant 
